# stef

./: .gitignore  .stylelintrc.json  CONTRIBUTING.md  NOTICE  README.md  makefile  package-lock.json  package.json  progress.md
rust/: Cargo.toml  README.md  makefile
rust/stef-core/: Cargo.toml
rust/stef-core/src/: allocsizechecker.rs  basereader.rs  benches.rs  bitstream.rs  bitstream_lookuptables.rs  chunkwriter.rs  codecs.rs  compression.rs  consts.rs  dictlimiter.rs  errors.rs  frame.rs  frameflags.rs  header.rs  helpers.rs  lib.rs  limits.rs  membuffer.rs  memreaderwriter.rs  readopts.rs  recordbuf.rs  schema.rs  slices.rs  types.rs  writeropts.rs
rust/stef-core/tests/: allocsizechecker_test.rs  bitstream_test.rs  float64_test.rs  frame_test.rs  header_test.rs  schema_test.rs
rust/stef-grpc/: Cargo.toml  build.rs
rust/stef-grpc/src/: client.rs  lib.rs  server.rs  types.rs
rust/stef-grpc/tests/: grpc_test.rs
rust/stef-otel/: Cargo.toml
rust/stef-otel/src/: aggregation_temporality.rs  any_value.rs  any_value_array.rs  attributes.rs  common.rs  envelope.rs  envelope_attributes.rs  event.rs  event_array.rs  exemplar.rs  exemplar_array.rs  exemplar_value.rs  exp_histogram_buckets.rs  exp_histogram_value.rs  float64_array.rs  histogram_value.rs  key_value_list.rs  lib.rs  link.rs  link_array.rs  metric.rs  metric_type.rs  metrics.rs  metrics_reader.rs  metrics_writer.rs  metrics_writer_test.rs  modified_fields.rs  point.rs  point_value.rs  quantile_value.rs  quantile_value_array.rs  reader_state.rs  resource.rs  scope.rs  span.rs  span_kind.rs  (+9 more)
rust/stefc-generated-tests/: .gitignore  Cargo.toml
(+1132 files in other folders)
