[workspace]
members = ["stef-core", "stef-grpc", "stef-otel"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/splunk/stef"

[workspace.dependencies]
bytes = "1.10"
rand = "0.9"
zstd = "0.13"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
tonic = { version = "0.13", features = ["transport"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
async-trait = "0.1"
parking_lot = "0.12"
bincode = { version = "2.0.1", features = ["serde"] }

[profile.bench]
debug = true
