[package]
name = "stef-grpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stef-core = { path = "../stef-core" }
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
tokio.workspace = true

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"
